# Shell

./: .main.cpp.swp  CMakeLists.txt  README.md  main.cpp  multipleCommand.h  names.txt  shell.cpp  singleCommand.cpp  singleCommand.h
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  inputfile  inputfile2  multiple_commands_tests.sh  output_redirection_tests.sh  pipe_operator_tests.sh  precedence_tests.sh  single_command_tests.sh  test_command_tests.sh  test_symbolic_tests.sh
src/: Command.h  Command.hpp  Symbols.cpp  Symbols.h  multipleCommand.cpp  multipleCommand.h  pareCommands.cpp  pareCommands.h  precedence_tests.sh  shell.cpp  singleCommand.cpp  singleCommand.h  test_command_tests.sh
unit_tests/: unit_tests.cpp
